# Voxelizer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RFTriangle.cpp  RFTriangle.h  RFVoxelOctree.cpp  RFVoxelOctreeBuilder.cpp  RFVoxelOctreeBuilder.h  main.cpp
Math/: TRFAABB3.h  TRFAABB3.inl  TRFRay3.h  TRFRay3.inl  TRFVector2.h  TRFVector2.inl  TRFVector3.h  TRFVector3.inl  TRFVector4.h  TRFVector4.inl  TRFVectors.cpp  TRFVectors.h
include/: Instrumentor.h  RFIntersectionTests.h  RFVoxelOctree.h  RFVoxelOctreeBuilder.h
output/: timeAnalysis.json  timeAnalysis_no_optimazation.json
src/: RFIntersectionTests.cpp  RFVoxelOctree.cpp  RFVoxelOctreeBuilder.cpp
